[package]
name = "sha3-literal"
version = "0.1.3"
edition = "2024"
license = "CC0-1.0"
description = "Literals for Sha3 hashes"

[dependencies]
hex = "0.4.3"
paste = "1.0.15"
proc-macro2 = "^1.0.94"
quote = "^1.0.40"
sha3 = "^0.10.8"
syn = { version = "^2.0.100", features = ["full"] }

[lib]
proc-macro = true
